--- a/arch/arm64/configs/libra_defconfig
+++ b/arch/arm64/configs/libra_defconfig
@@ -47,8 +47,7 @@ CONFIG_DEFAULT_HOSTNAME="libra"
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_FHANDLE is not set
-CONFIG_AUDIT=y
-# CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
+# CONFIG_AUDIT is not set
 
 #
 # IRQ subsystem
@@ -4217,7 +4216,6 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_CRC7 is not set
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
-CONFIG_AUDIT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
