treewide: Prevent over-sensitivity warnings from build process
* Out of sight, out of mind.
* We cannot fix all errors in the kernel, so just ignore them as all modules are functional.

Change-Id: I73ae5d52c2b65b62744bf137db57d0f724215e11

--- a/arch/powerpc/boot/Makefile
+++ b/arch/powerpc/boot/Makefile
@@ -19,7 +19,7 @@
 
 all: $(obj)/zImage
 
-BOOTCFLAGS    := -Wall -Wundef -Wstrict-prototypes -Wno-trigraphs \
+BOOTCFLAGS    := -Wno-trigraphs \
 		 -fno-strict-aliasing -msoft-float -pipe \
 		 -fomit-frame-pointer -fno-builtin -fPIC -nostdinc \
 		 -isystem $(shell $(CROSS32CC) -print-file-name=include)
