--- a/tools/firewire/Makefile
+++ b/tools/firewire/Makefile
@@ -5,9 +5,9 @@ CC = gcc
 
 all : nosy-dump
 
-nosy-dump : CFLAGS = -Wall -O3 -g
+nosy-dump : CFLAGS = -O3 -g0
 nosy-dump : CPPFLAGS = -DVERSION=\"$(nosy-dump-version)\" -I../../drivers/firewire
-nosy-dump : LDFLAGS = -g
+nosy-dump : LDFLAGS = -g0
 nosy-dump : LDLIBS = -lpopt
 
 nosy-dump : nosy-dump.o decode-fcp.o
