treewide: Prevent debug info gerneration
* Decrease kernel size on more situations.

Change-Id: Ib4e001298eedc9d51403ca646f7c068488c6fa6e

--- a/arch/cris/Makefile
+++ b/arch/cris/Makefile
@@ -49,7 +49,7 @@ KBUILD_CFLAGS += -mlinux -march=$(arch-y) -pipe $(inc)
 KBUILD_CPPFLAGS += $(inc)
 
 ifdef CONFIG_FRAME_POINTER
-KBUILD_CFLAGS := $(subst -fomit-frame-pointer,,$(KBUILD_CFLAGS)) -g
+KBUILD_CFLAGS := $(subst -fomit-frame-pointer,,$(KBUILD_CFLAGS)) -g0
 KBUILD_CFLAGS += -fno-omit-frame-pointer
 endif
 
