--- a/lib/raid6/test/Makefile
+++ b/lib/raid6/test/Makefile
@@ -5,7 +5,7 @@
 
 CC	 = gcc
 OPTFLAGS = -O3			# Adjust as desired
-CFLAGS	 = -I.. -I ../../../include -g $(OPTFLAGS)
+CFLAGS	 = -I.. -I ../../../include -g0 $(OPTFLAGS)
 LD	 = ld
 AWK	 = awk -f
 AR	 = ar
