--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -316,7 +316,7 @@ $(single-used-m): $(obj)/%.o: $(src)/%.c $(recordmcount_source) FORCE
 	@{ echo $(@:.o=.ko); echo $@; } > $(MODVERDIR)/$(@F:.o=.mod)
 
 quiet_cmd_cc_lst_c = MKLST   $@
-      cmd_cc_lst_c = $(CC) $(c_flags) -g -c -o $*.o $< && \
+      cmd_cc_lst_c = $(CC) $(c_flags) -g0 -c -o $*.o $< && \
 		     $(CONFIG_SHELL) $(srctree)/scripts/makelst $*.o \
 				     System.map $(OBJDUMP) > $@
 
