--- a/tools/usb/Makefile
+++ b/tools/usb/Makefile
@@ -2,8 +2,7 @@
 
 CC = $(CROSS_COMPILE)gcc
 PTHREAD_LIBS = -lpthread
-WARNINGS = -Wall -Wextra
-CFLAGS = $(WARNINGS) -g $(PTHREAD_LIBS) -I../include
+CFLAGS = $(WARNINGS) -g0 $(PTHREAD_LIBS) -I../include
 
 all: testusb ffs-test
 %: %.c
