--- a/arch/arm64/configs/libra_defconfig
+++ b/arch/arm64/configs/libra_defconfig
@@ -39,7 +39,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
-# CONFIG_CROSS_COMPILE is not set
+CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION="-EAS"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="libra"
@@ -136,7 +136,7 @@ CONFIG_MM_OWNER=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
-# CONFIG_INITRAMFS_SOURCE is not set
+CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
@@ -360,7 +360,7 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ZBUD is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
-# CONFIG_KSWAPD_CPU_AFFINITY_MASK is not set
+CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_PROCESS_RECLAIM is not set
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
@@ -378,7 +378,7 @@ CONFIG_CMDLINE="ramoops_memreserve=4M"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 # CONFIG_EFI is not set
 
 #
@@ -944,13 +944,13 @@ CONFIG_IPC_ROUTER_SECURITY=y
 #
 # Generic Driver Options
 #
-# CONFIG_UEVENT_HELPER_PATH is not set
+CONFIG_UEVENT_HELPER_PATH=""
 # CONFIG_DEVTMPFS is not set
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
-# CONFIG_EXTRA_FIRMWARE is not set
+CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
@@ -3064,8 +3064,8 @@ CONFIG_USB_G_ANDROID=y
 CONFIG_USB_CSW_HACK=y
 # CONFIG_USB_MSC_PROFILING is not set
 CONFIG_MODEM_SUPPORT=y
-# CONFIG_RMNET_SMD_CTL_CHANNEL is not set
-# CONFIG_RMNET_SMD_DATA_CHANNEL is not set
+CONFIG_RMNET_SMD_CTL_CHANNEL=""
+CONFIG_RMNET_SMD_DATA_CHANNEL=""
 # CONFIG_UWB is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
