ARM: dts: msm8992: Set GPU idle timeout to 64 ms
This matches the ULPS timeout used in MDSS; no need to keep the GPU
running after the display has decided to enter a low-power state.

Change-Id: Icc61cda37e96aa69272e99a25b28dd076eb2661f
Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>
Signed-off-by: mortezadadgar <mortezadadgar97@gmail.com>

--- a/arch/arm/boot/dts/qcom/msm8992-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8992-gpu.dtsi
@@ -47,7 +47,7 @@
 
 		qcom,initial-pwrlevel = <7>;
 
-		qcom,idle-timeout = <80>; //<HZ/12>
+		qcom,idle-timeout = <64>; //msec
 		qcom,strtstp-sleepwake;
 
 		/*
