drivers: tspdrv: Increase edge touch sampling time
The edge gesture was much too sensitive in the past, usually cause unexpected gestures.
This commit increased the timer period from 5 to 50, which should improve this problem in some conditions.

Change-Id: I776f328b1d17dbcde5345c87c1c8af5e94e473e2

--- a/arch/arm64/configs/libra_defconfig
+++ b/arch/arm64/configs/libra_defconfig
@@ -1060,6 +1060,7 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
+# CONFIG_UID_SYS_STATS is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 CONFIG_QSEECOM=y
 # CONFIG_QFP_FUSE is not set
@@ -3961,6 +3962,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_MAC_TURKISH is not set
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
+CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_VIRTUALIZATION is not set
 
 #
