--- a/arch/arm64/configs/libra_defconfig
+++ b/arch/arm64/configs/libra_defconfig
@@ -164,7 +164,7 @@ CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
-CONFIG_AIO=y
+# CONFIG_AIO is not set
 CONFIG_PCI_QUIRKS=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
@@ -2021,11 +2021,7 @@ CONFIG_MSM_DLOAD_MODE=y
 # CONFIG_POWER_AVS_MSM is not set
 CONFIG_MSM_PM=y
 # CONFIG_APSS_CORE_EA is not set
-CONFIG_MSM_IDLE_STATS=y
-CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
-CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
-CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
-CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
+# CONFIG_MSM_IDLE_STATS is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
