--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -19,7 +19,7 @@ LIBGCC 		:= $(shell $(CC) $(KBUILD_CFLAGS) -print-libgcc-file-name)
 
 KBUILD_DEFCONFIG := defconfig
 
-KBUILD_CFLAGS	+= -mgeneral-regs-only -fno-pic
+KBUILD_CFLAGS	+= -mgeneral-regs-only
 ifeq ($(CONFIG_CPU_BIG_ENDIAN), y)
 KBUILD_CPPFLAGS	+= -mbig-endian
 AS		+= -EB
