--- a/arch/arm64/configs/libra_defconfig
+++ b/arch/arm64/configs/libra_defconfig
@@ -83,8 +83,7 @@ CONFIG_SCHED_WALT=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
-CONFIG_TASK_XACCT=y
-CONFIG_TASK_IO_ACCOUNTING=y
+# CONFIG_TASK_XACCT is not set
 
 #
 # RCU Subsystem
@@ -282,6 +281,7 @@ CONFIG_ARM_AMBA=y
 CONFIG_PCI=y
 CONFIG_PCI_DOMAINS=y
 CONFIG_PCI_SYSCALL=y
+CONFIG_ARCH_SUPPORTS_MSI=y
 CONFIG_PCI_MSI=y
 # CONFIG_PCI_REALLOC_ENABLE_AUTO is not set
 # CONFIG_PCI_STUB is not set
@@ -409,7 +409,7 @@ CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
-CONFIG_PM_SYNC_BEFORE_SUSPEND=y
+# CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -457,7 +457,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
-CONFIG_DISABLE_NET_SKB_FRAG_CACHE=y
+# CONFIG_DISABLE_NET_SKB_FRAG_CACHE is not set
 
 #
 # Networking options
@@ -615,7 +615,6 @@ CONFIG_NETFILTER_XT_CONNMARK=y
 #
 # Xtables targets
 #
-# CONFIG_NETFILTER_XT_TARGET_AUDIT is not set
 # CONFIG_NETFILTER_XT_TARGET_CHECKSUM is not set
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
@@ -2722,8 +2721,6 @@ CONFIG_SND_SOC_WCD9330=y
 CONFIG_SND_SOC_WCD9XXX=y
 CONFIG_SND_SOC_WCD_CPE=y
 CONFIG_SND_SOC_MSM_STUB=y
-CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
-CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -3419,8 +3416,8 @@ CONFIG_ION_MSM=y
 # CONFIG_FIQ_WATCHDOG is not set
 CONFIG_ANDROID_SIMPLE_LMK=y
 CONFIG_ANDROID_SIMPLE_LMK_AGGRESSION=1
-CONFIG_ANDROID_SIMPLE_LMK_MINFREE=90
-CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=300
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=128
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=500
 # CONFIG_USB_WPAN_HCD is not set
 # CONFIG_WIMAX_GDM72XX is not set
 CONFIG_NET_VENDOR_SILICOM=y
@@ -3708,8 +3705,7 @@ CONFIG_MSM_QDSP6_APRV2=y
 # CONFIG_MSM_QDSP6_APRV3 is not set
 CONFIG_MSM_ADSP_LOADER=y
 # CONFIG_MSM_MEMORY_DUMP is not set
-CONFIG_MSM_MEMORY_DUMP_V2=y
-# CONFIG_MSM_DEBUG_LAR_UNLOCK is not set
+# CONFIG_MSM_MEMORY_DUMP_V2 is not set
 # CONFIG_MSM_DDR_HEALTH is not set
 # CONFIG_MSM_COMMON_LOG is not set
 CONFIG_MSM_WATCHDOG_V2=y
@@ -4247,4 +4243,4 @@ CONFIG_ARCH_HAS_ATOMIC64_DEC_IF_POSITIVE=y
 CONFIG_LIBFDT=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
-CONFIG_STRICT_MEMORY_RWX=y
+# CONFIG_STRICT_MEMORY_RWX is not set
