Revert "libra_defconfig: Rename f2fs kernel"
This reverts commit 7e5592941ab1311e52b587031f2f50a36ad52e6f.

--- a/arch/arm64/configs/libra_defconfig
+++ b/arch/arm64/configs/libra_defconfig
@@ -40,9 +40,9 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-F2FS-4.14-rc1"
+CONFIG_LOCALVERSION="-EAS"
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_DEFAULT_HOSTNAME="Gah0"
+CONFIG_DEFAULT_HOSTNAME="libra"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
